Melhoramento de código, adicionado FileStorageController, validações