@@ -23,19 +23,21 @@ public class ShopApplication {
 	public static void main(String[] args) {
 		SpringApplication.run(ShopApplication.class, args);
 		
-		final Path rootPerfil = Paths.get("imagens/perfil");
-		final Path rootProduto = Paths.get("imagens/produto");
-		final Path rootPedido = Paths.get("imagens/pedido");
+		final Path raizPerfil = Path.of(System.getProperty("user.home") + "/.shop/" + "imagens/perfil");
+
+		final Path raizProduto = Path.of(System.getProperty("user.home") + "/.shop/" + "imagens/produto");
+		
+		final Path raizPedido = Path.of(System.getProperty("user.home") + "/.shop/" + "imagens/pedido");
 		
 		try {
-			if (!Files.exists(rootPerfil)) {
-				Files.createDirectories(rootPerfil);
+			if (!Files.exists(raizPerfil)){
+				Files.createDirectories(raizPerfil);
 			}
-			if (!Files.exists(rootProduto)) {
-				Files.createDirectories(rootProduto);
+			if (!Files.exists(raizProduto)) {
+				Files.createDirectories(raizProduto);
 			}
-			if (!Files.exists(rootPedido)) {
-				Files.createDirectories(rootPedido);
+			if (!Files.exists(raizPedido)) {
+				Files.createDirectories(raizPedido);
 			}
 			} catch (IOException e) {
 				e.printStackTrace();
